# dark_imu_sensor

./: README.md
imu_sensor/: CMakeLists.txt  package.xml
imu_sensor/msg/: IMUData.msg  IMUEnums.msg  RawIMUData.msg  Trajectory.msg
imu_sensor/src/: fake_trajectory_publisher.cpp  fake_trajectory_publisher.hpp  imu_sensor.cpp  imu_sensor.hpp  traj_to_imu.cpp  traj_to_imu.hpp
launch/: launch_simulation.yaml
